feat(evm): improve language around EVM deployments (#215)
* feat(ovm): initial commit of addon boilerplate

* chore(kit): add Value helper fn to convert value to serde_json::Value

* chore(kit): add `get_expected_map` value store helper

* chore(kit): add additional status updater helpers

* chore(kit): add `define_map_type` macro

* feat(evm): add `transfer_eth` action

Also, remove sign_transfer action

* fix(evm): allow for cross-chain nonce management

* chore(ovm): add example

* chore(evm): add rpc methods for getting blocks

* feat(ovm): add actions to start/package a rollup

* fix(core): fix input eval to allow omitting optional map types

* chore(kit): add helpers for map type Values

* chore(evm): impl Into<String> for RpcError type

* chore(evm): simplify creation of `EvmValue::address`

* feat(evm): consolidate contract creation types to one action

* chore(core): add Diag helpers to std functions

* fix(core/kit): allow non-string types to be parsed by jq

* feat(evm): parse tx receipt events and output to contract interaction actions

* fix(evm): fix constructor argument parsing

* feat(evm): add helper function to encode contract call

* fix(kit): recursively handle nested map value evaluations

* refactor(evm): rename ABI encoding function for clarity

* fix(evm): update json_abi parameter to a reference in create_init_code function

* feat(evm): add transaction tracing functionality and enhance error reporting

* feat(evm): add AtomicProxyDeploymentFactory

* feat(txtx-cli): update build script to build EVM contracts using Forge

* feat(evm): enhance contract creation options to support proxied deployments

* feat(evm): add proxy factory constants and interfaces for ERC1967 proxy

* chore(core): remove println from jq fn

* chore(evm): add new constants for proxy and proxy factory contracts

* feat(evm): implement AddressAbiMap for managing contract ABIs and update abi_decode_logs to use 

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -29,6 +29,9 @@ jobs:
           rustup target add wasm32-unknown-unknown
           echo "RUST_VERSION_HASH=$(rustc --version | sha256sum | awk '{print $1}')" >> $GITHUB_ENV
 
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+
       - name: Cache cargo
         uses: actions/cache@v3
         with:
@@ -65,13 +68,19 @@ jobs:
           rustup target add wasm32-unknown-unknown
           echo "RUST_VERSION_HASH=$(rustc --version | sha256sum | awk '{print $1}')" >> $GITHUB_ENV
 
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+
       - name: Cache cargo
         uses: actions/cache@v3
         with:
           path: |
             ~/.cargo/
             ./target/wasm32-unknown-unknown/release/
-          key: ${{ runner.os }}-rust-${{ env.RUST_VERSION_HASH }}-cargo-${{ hashFiles('./Cargo.lock') }}
+          key: ${{ runner.os }}-rust-${{ env.RUST_VERSION_HASH }}-cargo-${{ hashFiles('./Cargo.lock', './crates/txtx-cli/build.rs', 'addons/evm/src/contracts/**') }}
+
+      - name: Build Project
+        run: cargo build --all --release
 
       - name: Run Tests
         run: cargo test --all
