feat(cli): add `txtx cloud login` command (#212)
* feat(cli): add `txtx auth login` command

* chore(ci): update ci .env to include auth service url

* chore: txtx-web-ui to txtx-supervisor-ui

* chore: rename auth to cloud

---------

Co-authored-by: Ludo Galabru <ludo@txtx.builders>

--- a/.github/workflows/push_main.yaml
+++ b/.github/workflows/push_main.yaml
@@ -114,7 +114,7 @@ jobs:
       - name: Build Supervisor UI
         run: |
           cd txtx-supervisor-ui
-          npm run i
+          npm i
           npm run build
           cd ..
 
