--- a/.github/workflows/build_ubuntu.yaml
+++ b/.github/workflows/build_ubuntu.yaml
@@ -20,13 +20,13 @@ jobs:
       - name: Checkout Txtx Web UI
         uses: actions/checkout@v4
         with:
-          repository: txtx/txtx-web-ui
+          repository: txtx/txtx-supervisor-ui
           token: ${{ secrets.TXTX_ACCESS_TOKEN }} 
-          path: txtx-web-ui 
+          path: txtx-supervisor-ui 
 
       - name: Build .env file for Txtx Web UI
         run: |
-          cd txtx-web-ui
+          cd txtx-supervisor-ui
           touch .env
           echo HANKO_API_URL=${{ secrets.HANKO_API_URL }} >> .env
           cat .env
@@ -39,7 +39,7 @@ jobs:
 
       - name: Build Txtx Web UI
         run: |
-          cd txtx-web-ui
+          cd txtx-supervisor-ui
           npm i
           npm run build
           cd ..
