--- a/addons/svm/Cargo.toml
+++ b/addons/svm/Cargo.toml
@@ -14,6 +14,7 @@ async-recursion = "1"
 bincode = "1.3"
 solana-sdk = { git = "https://github.com/txtx/solana", subdir = "solana/sdk" }
 spl-token = "=6.0.0"
+spl-associated-token-account = "=4.0.0"
 solana-client = { git = "https://github.com/txtx/solana", subdir = "solana/client", default-features = false }
 anchor-lang-idl = "0.1.1"
 borsh = "1.5.1"
