--- a/crates/txtx-cli/Cargo.toml
+++ b/crates/txtx-cli/Cargo.toml
@@ -60,6 +60,8 @@ txtx-lsp = { path = "../txtx-lsp" }
 tower-lsp = { version = "0.20.0" }
 open = "5.3.1"
 dirs = "5.0.1"
+serde_urlencoded = "0.7.1"
+base64 = "0.22.1"
 
 [features]
 default = ["cli"]
