feat(cli): add `txtx cloud publish` command

--- a/crates/txtx-cli/Cargo.toml
+++ b/crates/txtx-cli/Cargo.toml
@@ -60,6 +60,7 @@ txtx-lsp = { path = "../txtx-lsp" }
 tower-lsp = { version = "0.20.0" }
 open = "5.3.1"
 dirs = "5.0.1"
+graphql_client = "0.14.0"
 serde_urlencoded = "0.7.1"
 base64 = "0.22.1"
 
