--- a/addons/svm/Cargo.toml
+++ b/addons/svm/Cargo.toml
@@ -17,6 +17,7 @@ spl-token = "=6.0.0"
 spl-associated-token-account = "=4.0.0"
 solana-client = { git = "https://github.com/txtx/solana", subdir = "solana/client", default-features = false }
 anchor-lang-idl = "0.1.1"
+solana_idl = "0.2.0"
 borsh = "1.5.1"
 tiny-bip39 = "0.8.2"
 
