--- a/.github/actions/setup_env/action.yml
+++ b/.github/actions/setup_env/action.yml
@@ -15,5 +15,8 @@ runs:
         echo RELAYER_HOST="txtx.link" >> .env
         echo INFURA_API_KEY="${{ inputs.INFURA_API_KEY }}" >> .env
         echo AUTH_SERVICE_URL="https://id.txtx.run" >> .env
+        echo NHOST_REGION="${{ secrets.NHOST_REGION }}" >> .env
+        echo NHOST_SUBDOMAIN="${{ secrets.NHOST_SUBDOMAIN }}" >> .env
+        echo TXTX_CONSOLE_URL="https://txtx.run" >> .env
         cat .env
       shell: bash
