--- a/addons/svm/Cargo.toml
+++ b/addons/svm/Cargo.toml
@@ -12,10 +12,10 @@ serde = "1"
 serde_derive = "1"
 async-recursion = "1"
 bincode = "1.3"
-solana-sdk = { git = "https://github.com/txtx/solana", subdir = "solana/sdk" }
+solana-sdk = { git = "https://github.com/txtx/solana", branch = "2.1.0", subdir = "solana/sdk" }
 spl-token = "=6.0.0"
 spl-associated-token-account = "=4.0.0"
-solana-client = { git = "https://github.com/txtx/solana", subdir = "solana/client", default-features = false }
+solana-client = { git = "https://github.com/txtx/solana", branch = "2.1.0", subdir = "solana/client", default-features = false }
 anchor-lang-idl = "0.1.1"
 solana_idl = "0.2.0"
 borsh = "1.5.1"
