--- a/crates/txtx-test-utils/Cargo.toml
+++ b/crates/txtx-test-utils/Cargo.toml
@@ -13,6 +13,7 @@ categories = { workspace = true }
 txtx-addon-kit = { workspace = true, default-features = false }
 txtx-core = { workspace = true, default-features = false}
 hiro-system-kit = "0.3.4"
+tokio = "1.43.0"
 
 [dev-dependencies]
 test-case = "*"
