chore: bump version

--- a/.template.env
+++ b/.template.env
@@ -1,4 +1,6 @@
-RELAYER_BASE_URL="http://localhost:8489"
-RELAYER_HOST="localhost:8489"
-INFURA_API_KEY=""
-AUTH_SERVICE_URL="https://id.txtx.run"
+RELAYER_BASE_URL="http://127.0.0.1:8489"
+RELAYER_HOST="127.0.0.1:8489"
+AUTH_SERVICE_URL="https://id.txtx.run/"
+TXTX_CONSOLE_URL=""
+NHOST_REGION=""
+NHOST_SUBDOMAIN=""
