ci: update npm install command in supervisor UI workflow

--- a/.github/workflows/push_main.yaml
+++ b/.github/workflows/push_main.yaml
@@ -117,7 +117,7 @@ jobs:
       - name: Build Supervisor UI
         run: |
           cd txtx-supervisor-ui
-          npm i
+          npm run i
           npm run build
           cd ..
 
