feat: gql drifts (#229)
* fix: solana dependencies

* fix: gql drifts

* chore: bump version

* fix: tokio build

---------

Co-authored-by: MicaiahReid <micaiahreid@gmail.com>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace.package]
-version = "0.1.16"
+version = "0.2.0"
 edition = "2021"
 license = "Apache-2.0"
 repository = "https://github.com/txtx/txtx"
@@ -36,7 +36,7 @@ txtx-addon-telegram = { path = "addons/telegram" }
 txtx-addon-sp1 = { path = "addons/sp1" }
 
 [patch.crates-io]
-solana-curve25519 =  { git = "https://github.com/txtx/solana", subdir = "curves/curve25519" }
-solana-program = { git = "https://github.com/txtx/solana", subdir = "sdk/program" }
-solana-zk-sdk = { git = "https://github.com/txtx/solana", subdir = "zk-sdk" }
-solana-zk-token-sdk = { git = "https://github.com/txtx/solana", subdir = "zk-token-sdk" }
+solana-curve25519 =  { git = "https://github.com/txtx/solana", branch = "2.1.0", subdir = "curves/curve25519" }
+solana-program = { git = "https://github.com/txtx/solana", branch = "2.1.0", subdir = "sdk/program" }
+solana-zk-sdk = { git = "https://github.com/txtx/solana", branch = "2.1.0", subdir = "zk-sdk" }
+solana-zk-token-sdk = { git = "https://github.com/txtx/solana", branch = "2.1.0", subdir = "zk-token-sdk" }
