--- a/.github/workflows/push_main.yaml
+++ b/.github/workflows/push_main.yaml
@@ -107,7 +107,7 @@ jobs:
         run: |
           cd txtx-supervisor-ui
           touch .env
-          echo ID_SERVICE_URL="https://id.txtx.run/proxy" >> .env
+          echo AUTH_SERVICE_URL="https://id.txtx.run" >> .env
           echo TXTX_DEV_NPM_READ_TOKEN="${{ secrets.TXTX_DEV_NPM_READ_TOKEN }}" >> .env
           echo NHOST_REGION="${{ secrets.NHOST_REGION }}" >> .env
           echo NHOST_SUBDOMAIN="${{ secrets.NHOST_SUBDOMAIN }}" >> .env
@@ -120,7 +120,7 @@ jobs:
           npm run i
           npm run build
           cd ..
-          
+
       - name: Install Foundry
         uses: foundry-rs/foundry-toolchain@v1
 
