--- a/.github/workflows/push_main.yaml
+++ b/.github/workflows/push_main.yaml
@@ -128,7 +128,7 @@ jobs:
       # build for linux-musl
       - name: Build-musl
         if: matrix.os == 'ubuntu-20.04'
-        uses: micaiahreid/rust-musl-action
+        uses: micaiahreid/rust-musl-action@sha256:2273e9f8b8edaa23a0d6ea916140ae1aeb9eebb27000e8a1179a97522ca9fe22
         with:
           args: cargo build --manifest-path ./txtx/Cargo.toml --target ${{ matrix.target }} --release --features web_ui
 
