--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,3 +40,9 @@ solana-curve25519 =  { git = "https://github.com/txtx/solana", branch = "2.1.0",
 solana-program = { git = "https://github.com/txtx/solana", branch = "2.1.0", subdir = "sdk/program" }
 solana-zk-sdk = { git = "https://github.com/txtx/solana", branch = "2.1.0", subdir = "zk-sdk" }
 solana-zk-token-sdk = { git = "https://github.com/txtx/solana", branch = "2.1.0", subdir = "zk-token-sdk" }
+
+[patch.crates-io.curve25519-dalek]
+git = "https://github.com/solana-labs/curve25519-dalek.git"
+rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464"
+
+
