feat(evm): enhance ABI encoding with advanced type support
This commit adds comprehensive ABI encoding capabilities for EVM contract interactions, including:
- Support for complex ABI types like tuples, structs, and nested arrays
- Improved function and constructor argument encoding using contract ABIs
- Enhanced type conversion between JSON values and Solidity dynamic types

--- a/addons/evm/Cargo.toml
+++ b/addons/evm/Cargo.toml
@@ -15,7 +15,7 @@ serde_json = "1.0.113"
 serde = "1"
 serde_derive = "1"
 async-recursion = "1"
-alloy = { version = "0.1", features = ["full", "rlp"] }
+alloy = { version = "0.1", features = ["full", "rlp", "eip712"] }
 alloy-provider = { version = "0.1", features = ["debug-api"] }
 alloy-rpc-types = { version = "0.1", features = ["trace"] }
 alloy-signer-local = { version = "0.1.4", features = ["mnemonic"] }
