--- a/crates/txtx-core/Cargo.toml
+++ b/crates/txtx-core/Cargo.toml
@@ -30,6 +30,7 @@ similar = "2.5.0"
 better-debug = "1.0.1"
 serde_with = "3.11.0"
 tokio = { version = "1.37.0", features = ["sync"] }
+mustache = "0.9.0"
 
 [dev-dependencies]
 txtx-test-utils = {path = "../../crates/txtx-test-utils"}
