--- a/crates/txtx-lsp/Cargo.toml
+++ b/crates/txtx-lsp/Cargo.toml
@@ -13,6 +13,7 @@ lsp-types = "0.94.0"
 regex = "1.7"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
+txtx-addon-kit = { workspace = true, default-features = false }
 txtx-core = { workspace = true, default-features = false }
 txtx-addon-network-stacks = { workspace = true }
 txtx-addon-network-evm = { workspace = true }
