--- a/addons/svm/Cargo.toml
+++ b/addons/svm/Cargo.toml
@@ -17,14 +17,12 @@ serde = "1"
 serde_derive = "1"
 async-recursion = "1"
 bincode = "1.3"
-# solana-sdk = "2.1.10"
-# solana-client = "2.1.10"
-# spl-token = "7.0.0"
-solana-sdk = { git = "https://github.com/txtx/solana", branch = "2.1.0", subdir = "solana/sdk" }
-solana-client = { git = "https://github.com/txtx/solana", branch = "2.1.0", subdir = "solana/client", default-features = false }
-spl-token = "=6.0.0"
-spl-associated-token-account = "=4.0.0"
+solana-sdk = "2.1.10"
+solana-client = "2.1.10"
+spl-associated-token-account = "6.0.0"
+spl-token = "4.0.0"
 anchor-lang-idl = { version = "0.1.1", features = ["convert"] }
+solana_idl = "0.2.0"
 borsh = "1.5.1"
 tiny-bip39 = "0.8.2"
 
