--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -48,9 +48,6 @@ jobs:
       - name: Build WASM for txtx-addon-kit
         run: cargo build --package txtx-addon-kit --release --locked --target wasm32-unknown-unknown --features wasm --no-default-features
 
-      - name: Build WASM for txtx-addon-network-stacks
-        run: cargo build --package txtx-addon-network-stacks --release --locked --target wasm32-unknown-unknown --features wasm --no-default-features
-
   tests:
     name: Run Test Suite
     runs-on: ubuntu-latest
@@ -84,7 +81,7 @@ jobs:
           key: ${{ runner.os }}-rust-${{ env.RUST_VERSION_HASH }}-cargo-${{ hashFiles('./Cargo.lock', './crates/txtx-cli/build.rs', 'addons/evm/src/contracts/**') }}
 
       - name: Build Project
-        run: cargo build --all --release
+        run: cargo build --workspace --exclude txtx-addon-network-stacks --release
 
       - name: Run Tests
-        run: cargo test --all
+        run: cargo --workspace --exclude txtx-addon-network-stacks 
