--- a/crates/txtx-core/Cargo.toml
+++ b/crates/txtx-core/Cargo.toml
@@ -12,7 +12,7 @@ categories = { workspace = true }
 daggy = "0.8.0"
 base64 = "0.22.1"
 bs58 = "0.5.1"
-# txtx-addon-kit = { version = "0.1", optional = true }
+# txtx-addon-kit = { version = "0.2.1", default-features = false }
 txtx-addon-kit = { workspace = true, default-features = false}
 getrandom = { version = "0.2", features = ["js"] }
 lazy_static = "1.4.0"
@@ -30,6 +30,7 @@ similar = "2.5.0"
 better-debug = "1.0.1"
 serde_with = "3.11.0"
 tokio = { version = "1.37.0", features = ["sync"] }
+mustache = "0.9.0"
 
 [dev-dependencies]
 txtx-test-utils = {path = "../../crates/txtx-test-utils"}
