--- a/crates/txtx-lsp/Cargo.toml
+++ b/crates/txtx-lsp/Cargo.toml
@@ -13,8 +13,8 @@ lsp-types = "0.94.0"
 regex = "1.7"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0"
+txtx-addon-kit = { workspace = true, default-features = false }
 txtx-core = { workspace = true, default-features = false }
-txtx-addon-network-stacks = { workspace = true }
 txtx-addon-network-evm = { workspace = true }
 txtx-addon-telegram = { workspace = true }
 
@@ -30,7 +30,6 @@ web-sys = { version = "0.3", features = ["console"], optional = true }
 default = [
   "txtx-core/default",
   "txtx-addon-network-evm/default",
-  "txtx-addon-network-stacks/default"
 ]
 wasm = [
   "wasm-bindgen",
@@ -41,7 +40,6 @@ wasm = [
   "console_error_panic_hook",
   "txtx-core/wasm",
   "txtx-addon-network-evm/wasm",
-  "txtx-addon-network-stacks/wasm"
 ]
 
 [lib]
