fix(ci): use correct test command for ci

--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -84,4 +84,4 @@ jobs:
         run: cargo build --workspace --exclude txtx-addon-network-stacks --release
 
       - name: Run Tests
-        run: cargo --workspace --exclude txtx-addon-network-stacks 
+        run: cargo test --workspace --exclude txtx-addon-network-stacks 
