--- a/.github/workflows/release_crates.yaml
+++ b/.github/workflows/release_crates.yaml
@@ -37,10 +37,7 @@ jobs:
         uses: foundry-rs/foundry-toolchain@v1
 
       - name: Install Rust toolchain
-        run: rustup toolchain install 1.79 --profile minimal --target ${{ matrix.target }}
-
-      - name: Install Rust Target
-        run: rustup target add ${{ matrix.target }}
+        run: rustup toolchain install 1.84.0 --profile minimal
 
       - name: Build - Cargo
         run: 
