--- a/.github/workflows/release_crates.yaml
+++ b/.github/workflows/release_crates.yaml
@@ -43,13 +43,13 @@ jobs:
         run: 
           cargo build --release --locked
 
-      - name: Publish txtx-addon-kit to crates.io
-        uses: katyo/publish-crates@v2
-        with:
-            dry-run: ${{ github.event_name != 'push' }}
-            ignore-unpublished-changes: true
-            registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-            path: './crates/txtx-addon-kit'
+      # - name: Publish txtx-addon-kit to crates.io
+      #   uses: katyo/publish-crates@v2
+      #   with:
+      #       dry-run: ${{ github.event_name != 'push' }}
+      #       ignore-unpublished-changes: true
+      #       registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      #       path: './crates/txtx-addon-kit'
 
       - name: Publish txtx-core to crates.io
         uses: katyo/publish-crates@v2
