--- a/.github/workflows/release_crates.yaml
+++ b/.github/workflows/release_crates.yaml
@@ -1,76 +1,56 @@
-name: Release Crates
+name: Publish Rust Crates
+
 on:
+  pull_request:
   push:
     branches:
       - main
       - ci/release
-  pull_request:
-    branches:
-      - main
-  workflow_dispatch:
-
-concurrency:
-  group: ${{ github.workflow }} @ ${{ github.event.pull_request.head.label || github.head_ref || github.ref }}
-  cancel-in-progress: true
 
 jobs:
-  release_crates:
-    name: Release to crates.io
+  publish:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Build .env file
+      - name: Set up Rust
+        uses: dtolnay/rust-toolchain@stable
+
+      - name: Cache Cargo registry and index
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+          key: cargo-${{ runner.os }}-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: cargo-${{ runner.os }}-
+
+      - name: Login to crates.io
+        if: github.event_name == 'push'
+        run: cargo login ${{ secrets.CARGO_API_TOKEN }}
+
+      - name: Publish Crates
         run: |
-          touch .env
-          echo RELAYER_BASE_URL="https://txtx.link" >> .env
-          echo RELAYER_HOST="txtx.link" >> .env
-          echo INFURA_API_KEY=${{ secrets.INFURA_API_KEY }} >> .env
-          echo NHOST_REGION="" >> .env
-          echo NHOST_SUBDOMAIN="" >> .env
-          echo TXTX_CONSOLE_URL="https://txtx.run" >> .env
-          echo AUTH_SERVICE_URL="https://id.txtx.run" >> .env
-          cat .env
-
-      - name: Install Foundry
-        uses: foundry-rs/foundry-toolchain@v1
-
-      - name: Install Rust toolchain
-        run: rustup toolchain install 1.84.0 --profile minimal
-
-      - name: Build - Cargo
-        run: 
-          cargo build --release --locked
-
-      # - name: Publish txtx-addon-kit to crates.io
-      #   uses: katyo/publish-crates@v2
-      #   with:
-      #       dry-run: ${{ github.event_name != 'push' }}
-      #       ignore-unpublished-changes: true
-      #       registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-      #       path: './crates/txtx-addon-kit'
-
-      - name: Publish txtx-core to crates.io
-        uses: katyo/publish-crates@v2
-        with:
-            dry-run: ${{ github.event_name != 'push' }}
-            ignore-unpublished-changes: true
-            registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-            path: './crates/txtx-core'
-
-      - name: Publish txtx-gql to crates.io
-        uses: katyo/publish-crates@v2
-        with:
-            dry-run: ${{ github.event_name != 'push' }}
-            ignore-unpublished-changes: true
-            registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-            path: './crates/txtx-gql'
-
-      - name: Publish txtx-addon-network-svm to crates.io
-        uses: katyo/publish-crates@v2
-        with:
-            dry-run: ${{ github.event_name != 'push' }}
-            ignore-unpublished-changes: true
-            registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-            path: './addons/svm'
+          for crate in addons/svm crates/txtx-gql crates/txtx-core crates/txtx-addon-kit; do
+            if [ -f "$crate/Cargo.toml" ]; then
+              echo "Checking $crate for changes..."
+              VERSION=$(cargo metadata --format-version=1 | jq -r '.packages[] | select(.manifest_path | startswith("'"$crate"'")) | .version')
+              
+              if cargo search $(basename $crate) | grep -q "$VERSION"; then
+                echo "$crate is already published with version $VERSION, skipping..."
+                continue
+              fi
+              
+              echo "Publishing $crate..."
+              if [ "${{ github.event_name }}" = "pull_request" ]; then
+                cargo publish --manifest-path "$crate/Cargo.toml" --dry-run
+              else
+                cargo publish --manifest-path "$crate/Cargo.toml"
+              fi
+            else
+              echo "Skipping $crate, Cargo.toml not found."
+            fi
+          done
+        env:
+          CARGO_API_TOKEN: ${{ secrets.CARGO_API_TOKEN }}
