--- a/.github/workflows/release_crates.yaml
+++ b/.github/workflows/release_crates.yaml
@@ -43,10 +43,10 @@ jobs:
             if [ -f "$manifest" ]; then
               echo "Checking $manifest for changes..."
               
-              CRATE_NAME=$(tq -r .package.name "$manifest")
-              VERSION=$(tq -r .package.version "$manifest")
+              CRATE_NAME=$(tq -f "$manifest" .package.name)
+              VERSION=$(tq -f "$manifest" .package.version)
 
-              if cargo search "$CRATE_NAME" | grep -q "$VERSION"; then
+              if cargo search "$CRATE_NAME" | grep "$VERSION"; then
                 echo "$CRATE_NAME ($manifest) is already published with version $VERSION, skipping..."
                 continue
               fi
