--- a/crates/txtx-addon-kit/Cargo.toml
+++ b/crates/txtx-addon-kit/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "txtx-addon-kit"
 description = "Low level primitives for building addons for Txtx"
-version = { workspace = true }
+version = "0.2.3"
 edition = { workspace = true }
 license = { workspace = true }
 repository = { workspace = true }
