--- a/crates/txtx-core/Cargo.toml
+++ b/crates/txtx-core/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "txtx-core"
 description = "Primitives for parsing, analyzing and executing Txtx runbooks"
-version = { workspace = true }
+version = "0.2.3"
 edition = { workspace = true }
 license = { workspace = true }
 repository = { workspace = true }
