--- a/.github/workflows/release_crates.yaml
+++ b/.github/workflows/release_crates.yaml
@@ -69,9 +69,9 @@ jobs:
 
               echo "Publishing $CRATE_NAME from $manifest..."
               if [ "${{ github.event_name }}" = "pull_request" ]; then
-                cargo publish --package $CRATE_NAME --dry-run
+                cargo publish --package $CRATE_NAME --dry-run --allow-dirty
               else
-                cargo publish --package $CRATE_NAME --dry-run
+                cargo publish --package $CRATE_NAME --dry-run --allow-dirty
               fi
             else
               echo "Skipping $manifest, Cargo.toml not found."
