--- a/addons/evm/Cargo.toml
+++ b/addons/evm/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "txtx-addon-network-evm"
+description = "Primitives for executing EVM runbooks"
 version = "0.1.0"
-edition = "2021"
+edition = { workspace = true }
+license = "Apache-2.0"
+repository = { workspace = true }
+keywords = { workspace = true }
+categories = { workspace = true }
 
 [dependencies]
 sha2 = "0.10.8"
