--- a/.github/workflows/release_cli.yaml
+++ b/.github/workflows/release_cli.yaml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - main
-      - fix/release-build
+      - ci/release
   workflow_dispatch:
 
 concurrency:
@@ -130,7 +130,6 @@ jobs:
         run: rustup toolchain install 1.79 --profile minimal --target ${{ matrix.target }}
 
       - name: Install Rust Target
-        if: matrix.os != 'ubuntu-20.04'
         run: rustup target add ${{ matrix.target }}
 
       # env vars unix
